--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "arm.js",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.html",
   "dependencies": {
     "johnny-five": "^0.8.38",
     "leapjs": "^0.6.4",
+    "nw": "^0.12.0-alpha2",
     "serialport": "^1.4.9"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "nw",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +23,21 @@
   "bugs": {
     "url": "https://github.com/arm/arm.js/issues"
   },
-  "homepage": "https://github.com/arm/arm.js"
+  "homepage": "https://github.com/arm/arm.js",
+  "window": {
+    "title": "arm.js",
+    "icon": "",
+    "toolbar": true,
+    "frame": true,
+    "width": 800,
+    "height": 500,
+    "position": "mouse",
+    "min_width": 400,
+    "min_height": 200,
+    "max_width": 800,
+    "max_height": 600
+  },
+  "webkit": {
+    "plugin": true
+  }
 }
