--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "dependencies": {
     "johnny-five": "^0.8.38",
     "leapjs": "^0.6.4",
-    "nw": "^0.12.0-alpha2",
-    "serialport": "^1.4.9"
+    "nodewebkit": "^0.8.6"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "nw",
+    "start": "nodewebkit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
