--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "johnny-five": "^0.8.38",
     "leapjs": "^0.6.4",
-    "nodewebkit": "^0.8.6"
+    "nodewebkit": "^0.8.6",
+    "three": "^0.69.0"
   },
   "devDependencies": {},
   "scripts": {
