updated ui styling

--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   },
   "homepage": "https://github.com/arm/arm.js",
   "window": {
-    "title": "arm.js",
+    "title": "arm",
     "icon": "",
-    "toolbar": true,
+    "toolbar": false,
     "frame": true,
-    "width": 800,
-    "height": 500,
+    "width": 400,
+    "height": 300,
+    "resizable": false,
     "position": "mouse",
     "min_width": 400,
     "min_height": 200,
