--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "window": {
     "title": "arm",
     "icon": "",
-    "toolbar": false,
+    "toolbar": true,
     "frame": true,
     "width": 400,
     "height": 300,
