removed controller folder, added express

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/arm/mira.js",
   "dependencies": {
+    "express": "^4.12.3",
     "johnny-five": "^0.8.52",
     "leapjs": "^0.6.4"
   }
