--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "mira.js",
   "version": "1.0.0",
   "description": "motion interface robotic arm",
-  "main": "src/index.js",
+  "main": "src/server.js",
   "scripts": {
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
